# docs-obsidian-various-complements-plugin

./: .gitignore  404.html  CLAUDE.md  README.md  Taskfile.yml  index.html  main.css  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
1. Features/Current file complement/: index.html
1. Features/Current vault complement/: index.html
1. Features/Custom dictionary complement/: index.html
1. Features/Fallback linkify/: index.html
1. Features/Front matter complement/: index.html
1. Features/Intelligent suggestion prioritization/: index.html
1. Features/Internal link complement/: index.html
1. Features/Predictable complement/: index.html
2. Strategies/arabic/: index.html
2. Strategies/chinese/: index.html
2. Strategies/default/: index.html
2. Strategies/english-only/: index.html
2. Strategies/japanese/: index.html
2. Strategies/korean/: index.html
3. Commands/🎮 Add a word to a custom dictionary/: index.html
3. Commands/🎮 Copy plugin settings/: index.html
3. Commands/🎮 Hide suggestions/: index.html
3. Commands/🎮 Predictable complement/: index.html
3. Commands/🎮 Reload current vault/: index.html
3. Commands/🎮 Reload custom dictionaries/: index.html
3. Commands/🎮 Show suggestions/: index.html
3. Commands/🎮 Toggle Complement automatically/: index.html
3. Commands/🎮 Toggle Match strategy/: index.html
3. Commands/🎮Add a word to a custom dictionary/: index.html
3. Commands/🎮Copy plugin settings/: index.html
docs/: .obsidian.vimrc  index.md  main.css
search/: search_index.json
(+319 files in other folders)
