[tool.poetry]
name = "docs-obsidian-various-complements-plugin"
version = "0.1.0"
description = ""
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.1.7"
mkdocs-roamlinks-plugin = {git = "https://github.com/tadashi-aikawa/mkdocs-roamlinks-plugin.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
